removed entering name

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <h1 id="level-title">Enter your name to Start</h1>
-  <input class="name" type="text" placeholder="Name">
-  <button class="submit-butt" type="submit">Submit</button>
+  <h1 id="level-title">Press the Button to start</h1>
+  <!-- <input class="name" type="text" placeholder="Name"> -->
+  <button class="submit-butt" type="submit">Start</button>
 
   <div class="container">
     <div lass="row">
