--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1 id="level-title">Press the Button to start</h1>
   <!-- <input class="name" type="text" placeholder="Name"> -->
-  <button class="submit-butt" type="submit">Start</button>
+  <button class="start-butt" type="submit">Start</button>
 
   <div class="container">
     <div lass="row">
