added guide to play

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+  <a class="intro" href="https://en.wikipedia.org/wiki/Simon_(game)">Simon Game</a>
+  <a class="guide"
+    href="https://docs.google.com/document/d/104c25iE3ALivLvc5sAV65ZKhK2Em8alxtIXuDQsZmYw/edit?usp=sharing">How to
+    play?</a>
   <h1 id="level-title">Press the Button to start</h1>
   <!-- <input class="name" type="text" placeholder="Name"> -->
   <button class="start-butt" type="submit">Start</button>
